# myBeetsPipeline

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.env.example  golden-beet-config.yaml  golden-beets-config.yaml  mise.toml  pyproject.toml  ruff.toml  setup.sh  uninstall.sh
.github/workflows/: test.yml
beets/: config.yaml  convert.yaml  fetchart-fs.yaml  qa.yaml  replaygain.yaml
gbc/: __init__.py  admin.py  anomaly.py  artfix.py  beets.py  beetscfg.py  cli.py  config.py  dedup.py  lock.py  logs.py  mb.py  sidecars.py  state.py  util.py
gbc/passes/: _ab_bulk.py  acousticbrainz.py  albumdedup.py  convert.py  import_.py  inbox.py  nova.py  pipeline.py  qa.py  reclaim.py  upgrade.py  verify.py
helpers/: flac-encode.sh  mutagen-strip.py  scan-scrub-crash.py  strip-broken-art.py  wma2opus.sh
musicrec/: __init__.py  admin.py  anomaly.py  cli.py  config.py  dedup.py  logs.py  sidecars.py  state.py
musicrec/passes/: enrich.py  import_.py  inbox.py  pipeline.py  qa.py  replaygain.py
tests/: base.py  test_albumdedup.py  test_anomaly.py  test_artfix.py  test_beets.py  test_beetscfg.py  test_cli_admin.py  test_config.py  test_dedup.py  test_import_branch.py  test_inbox.py  test_lock.py  test_logs.py  test_mb.py  test_nova.py  test_pipeline.py  test_qa.py  test_reclaim.py  test_sidecars.py  test_smoke.py  test_state.py  test_upgrade.py  test_util.py  test_verify.py
