# gbc — single Python orchestration app driving beets (engine) via subprocess.
# Install as a CLI:  uv tool install --editable .   ->  `gbc` on PATH (cron calls `gbc inbox`).
[project]
name = "golden-beet-config"
version = "0.4.0"
description = "Recover a chaotic music library into a clean album library (beets-driven pipeline)."
requires-python = ">=3.11"
dependencies = ["filelock>=3.12"]

[project.scripts]
gbc = "gbc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gbc"]

# Tests use the stdlib `unittest` (no pytest dependency) -- see `mise run test`.
