# gbc — single Python orchestration app driving beets (engine) via subprocess.
# Install as a CLI:  uv tool install --editable .   ->  `gbc` on PATH (cron calls `gbc inbox`).
[project]
name = "golden-beets-config"
version = "0.8.0"
description = "Recover a chaotic music library into a clean album library (beets-driven pipeline)."
requires-python = ">=3.13"
dependencies = ["filelock>=3.29", "pyacoustid>=1.3", "pyyaml>=6", "mediafile>=0.17", "mutagen>=1.48"]

[project.scripts]
gbc = "gbc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gbc"]

# Tests use the stdlib `unittest` (no pytest dependency) -- see `mise run test`.
