# gbc — single Python orchestration app driving beets (engine) via subprocess.
# Install as a CLI:  uv tool install --editable .   ->  `gbc` on PATH (cron calls `gbc inbox`).
[project]
name = "golden-beets-config"
version = "0.8.0"
description = "Opinionated, beets-driven pipeline that sorts and tags a music library into clean, complete albums and a separate singles collection, AcoustID/MusicBrainz-verified."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = ["filelock>=3.29", "pyacoustid>=1.3", "pyyaml>=6", "mediafile>=0.17", "mutagen>=1.48"]

[project.scripts]
gbc = "gbc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gbc"]

# Tests use the stdlib `unittest` (no pytest dependency) -- see `mise run test`.

[tool.mypy]
python_version = "3.13"
files = ["gbc"]

# Third-party libs without type stubs (C-backed / no py.typed): ignore just these, not all imports, so a
# real typo'd internal import is still caught.
[[tool.mypy.overrides]]
module = ["yaml", "mediafile", "mutagen.*", "acoustid"]
ignore_missing_imports = true
